--- a/Continuada1/app/src/main/res/layout/activity_main.xml
+++ b/Continuada1/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,10 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/tv_tema"
+        android:id="@+id/tv_titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Digite o mês que ficou em casa: "
+        android:text="Diga se é RV ou TD: "
         android:textSize="25sp"
         android:translationY="15dp"
         android:textColor="#000000"/>
@@ -18,58 +18,58 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/et_mes"
-        android:hint="Digite o mês aqui"
+        android:id="@+id/et_investido"
+        android:hint="tipo investido:"
         android:inputType="text"
         android:layout_marginTop="13dp"
         android:textSize="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_tema"
+        app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
         />
 
     <TextView
-        android:id="@+id/tv_ficou"
+        android:id="@+id/tv_compra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Digite os dias que ficou em casa: "
+        android:text="Digite o valor que comprou: "
         android:textSize="25sp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/et_mes"
+        app:layout_constraintTop_toBottomOf="@+id/et_investido"
         android:textColor="#000000"/>
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/et_ficou"
-        android:hint="Digite a presença aqui"
+        android:id="@+id/et_compra"
+        android:hint="valor investido:"
         android:inputType="text"
         android:layout_marginTop="1dp"
         android:textSize="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_ficou"
+        app:layout_constraintTop_toBottomOf="@+id/tv_compra"
         />
 
     <TextView
-        android:id="@+id/tv_saiu"
+        android:id="@+id/tv_atual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Digite os dias que saiu de casa: "
+        android:text="Digite o valor atual: "
         android:layout_marginTop="8dp"
         android:textSize="25sp"
         android:textColor="#000000"
-        app:layout_constraintTop_toBottomOf="@+id/et_ficou"/>
+        app:layout_constraintTop_toBottomOf="@+id/et_compra"/>
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/et_saiu"
-        android:hint="Digite a falta aqui"
-        android:inputType="text"
+        android:id="@+id/et_atual"
+        android:hint="valor atual:        "
+        android:inputType="numberDecimal"
         android:layout_marginTop="2dp"
         android:textSize="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_saiu"
+        app:layout_constraintTop_toBottomOf="@+id/tv_atual"
         />
 
     <TextView
-        android:id="@+id/tv_texto_resultado"
+        android:id="@+id/tv_texto_rentabilidade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
@@ -77,16 +77,17 @@
         android:translationX="15dp"
         android:textSize="20sp"
         android:textColor="#000000"
-        app:layout_constraintTop_toBottomOf="@+id/et_saiu"/>
+        app:layout_constraintTop_toBottomOf="@+id/et_atual"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Resultado"
-        app:layout_constraintTop_toBottomOf="@+id/tv_texto_resultado"
-        android:translationX="147dp"
+        android:text="Rentabilidade"
+        android:id="@+id/bt_rentabilidade"
+        app:layout_constraintTop_toBottomOf="@+id/tv_texto_rentabilidade"
+        android:translationX="140dp"
         android:layout_marginTop="20dp"
-        android:onClick="aoClicar"/>
+        android:onClick="onClick"/>
 
 
 
