--- a/Continuada1/app/src/main/res/layout/activity_main.xml
+++ b/Continuada1/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/et_compra"
         android:hint="valor investido:"
-        android:inputType="text"
+        android:inputType="numberDecimal"
         android:layout_marginTop="1dp"
         android:textSize="25dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_compra"
